[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_app/tab_scenes/config/Config.gd" type="Script" id=1]
[ext_resource path="res://main_app/tab_scenes/config/Progress.gd" type="Script" id=2]
[ext_resource path="res://main_app/tab_scenes/config/BadgeProgress.gd" type="Script" id=3]
[ext_resource path="res://main_app/tab_scenes/config/ProfileSetupBlock.tscn" type="PackedScene" id=4]

[node name="Config" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 994.0
margin_bottom = 570.0
custom_constants/separation = 15

[node name="ProfileSetupBlock" parent="Content" instance=ExtResource( 4 )]
margin_bottom = 48.0

[node name="Inititalize" type="Button" parent="Content"]
margin_left = 392.0
margin_top = 63.0
margin_right = 572.0
margin_bottom = 83.0
size_flags_horizontal = 4
text = "Get Game and Badge Data"

[node name="InitializeProgress" type="Label" parent="Content"]
margin_top = 98.0
margin_right = 964.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.592157, 1, 0, 1 )
text = "Scrubbing Games Data (%03d/%03d)
Scrubbing Badge Data (%03d/%03d)"
align = 1
script = ExtResource( 2 )

[node name="WarningLabel2" type="Label" parent="Content"]
margin_top = 144.0
margin_right = 964.0
margin_bottom = 175.0
text = "(Getting name_ids is really slow, and has a 5 minute cooldown when requests exceed a certain limit. 
But it is done only once per card, future price updates are much faster)"
align = 1
autowrap = true

[node name="IncompleteBadgePrices" type="Button" parent="Content"]
margin_left = 353.0
margin_top = 190.0
margin_right = 611.0
margin_bottom = 210.0
size_flags_horizontal = 4
text = "Inititlize Prices for Incomplete Badges"

[node name="IncompleteBadgeProgress" type="Label" parent="Content"]
margin_top = 225.0
margin_right = 964.0
margin_bottom = 273.0
custom_colors/font_color = Color( 0.592157, 1, 0, 1 )
text = "Scrubbing Card Name ids (%05d/%05d) 
Getting Card Prices (%05d/%05d)
requests cooldown: %02d:%02d"
align = 1
script = ExtResource( 3 )

[node name="CompletedBadgePrices" type="Button" parent="Content"]
margin_left = 355.0
margin_top = 288.0
margin_right = 609.0
margin_bottom = 308.0
size_flags_horizontal = 4
text = "Inititlize Prices for Completed Badges"

[node name="CompleteBadgeProgress" type="Label" parent="Content"]
margin_top = 323.0
margin_right = 964.0
margin_bottom = 371.0
custom_colors/font_color = Color( 0.592157, 1, 0, 1 )
text = "Scrubbing Card Name ids (%03d/%35d) 
Getting Card Prices (%03d/%03d)
requests cooldown: %02d:%02d"
align = 1
script = ExtResource( 3 )

[connection signal="pressed" from="Content/Inititalize" to="." method="_on_Inititalize_pressed"]
[connection signal="pressed" from="Content/IncompleteBadgePrices" to="." method="_on_IncompleteBadgePrices_pressed"]
[connection signal="pressed" from="Content/CompletedBadgePrices" to="." method="_on_CompletedBadgePrices_pressed"]
